@@ -8,11 +8,9 @@ pkgdesc="A desktop news aggregator for online news feeds and weblogs"
 arch=('i686' 'x86_64')
 url="http://liferea.sourceforge.net/"
 license=('GPL')
-depends=('gconf' 'libwebkit' 'libxslt' 'libglade' 'sqlite3' 'hicolor-icon-theme'
-         'libunique')
-makedepends=('pkg-config' 'intltool' 'lua' 'libnotify')
-optdepends=('lua: for lua scripting support'
-            'libnotify: for notification support')
+depends=('gconf' 'libwebkit' 'libxslt' 'sqlite3' 'hicolor-icon-theme'
+         'libunique' 'libnotify')
+makedepends=('pkg-config' 'intltool')
 options=('!libtool' '!emptydirs')
 install=liferea.install
 changelog=ChangeLog
