@@ -2,6 +2,9 @@
 
 	* liferea 1.7.4-1
 	* Upstream update
+	* Changed libnotify optdepends to depends
+	* Removed lua optdepends (not available any more)
+	* Removed libglade dependency
 
 2011-03-07  Jan Steffens  <jan.steffens@gmail.com>
 
